--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";body{font-family:'Rubik', sans-serif;position:relative;background:url(../images/bg.png);}
+@charset "UTF-8";body{font-family:'Rubik', sans-serif;position:relative;background:url(../images/bg.png) repeat-y center center;}
 a{color:#02ABA0;}
 a:hover,
 a:focus{color:#d6619c;}
@@ -43,7 +43,14 @@ h2{font-size:30px;}
 }
 header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 .bg-nav{}
-.bg-top{background:url(../images/top.png);}
+.bg-top{background:url(../images/top.png) no-repeat center center fixed;     
+	background-attachment: fixed;
+    background-size: cover;
+    background-position: 50% 50%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;}
 .bg-gradient{background:#A1FFCE;background:-webkit-linear-gradient(to right, #FAFFD1, #A1FFCE);background:linear-gradient(to right, #FAFFD1, #A1FFCE);}
 .tagline{font-size:23px;font-weight:300;color:#1d1d1d;max-width:800px;margin:0 auto;}
 .img-holder{height:0;padding-bottom:33%;overflow:hidden;}
@@ -98,14 +105,6 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 @media (max-width:992px){.card-deck{-ms-flex-direction:column;flex-direction:column;}
 .card-deck .card{margin-bottom:15px;}
 }
-.card.pricing{border:1px solid #f1eef1;}
-.card.pricing.popular{border-top-width:3px;border-color:#3d3d3d #faf6fb #FFF;box-shadow:0px 12px 59px 0px rgba(36, 7, 31, 0.11);color:#3D3D3D;}
-.card.pricing .card-head{text-align:center;padding:40px 0 20px;}
-.card.pricing .card-head .price{display:block;font-size:45px;font-weight:300;color:#3D3D3D;}
-.card.pricing .card-head .price sub{bottom:0;font-size:55%;}
-.card.pricing .list-group-item{border:0;text-align:center;color:#959094;padding:1.05rem 1.25rem;}
-.card.pricing .list-group-item del{color:#d9d3d8;}
-.card.pricing .card-body{padding:1.75rem;}
 .call-to-action{text-align:center;color:#FFF;margin:3rem 0;}
 .call-to-action .box-icon{margin-left:auto;margin-right:auto;border-radius:5px;transform:scale(0.85);margin-bottom:2.5rem;}
 .call-to-action h2{color:#FFF;}
@@ -115,4 +114,10 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 .social-icons a{background-color:#FFF;box-shadow:0px 0px 21px 0px rgba(0, 0, 0, 0.05);width:50px;height:50px;display:inline-block;text-align:center;line-height:50px;margin:0 0.3rem;border-radius:5px;color:#959595;transition:all 0.3s ease;}
 .social-icons a:hover{text-decoration:none;color:#02ABA0;}
 @media (max-width:991px){.social-icons{text-align:center;margin-top:2rem;}
+}
+@media only screen and (max-width:576px) {
+   .bg-top {
+        background-attachment: scroll;
+    }
+    body{background:url(../images/bg.png) repeat-y;}
 }
