--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 }
 .call-to-action{text-align:center;color:#FFF;margin:3rem 0;}
 .call-to-action .box-icon{margin-left:auto;margin-right:auto;border-radius:5px;transform:scale(0.85);margin-bottom:2.5rem;}
-.call-to-action h2{color:#FFF;}
+.call-to-action h2{color:#1AB3A9;}
 .call-to-action .tagline{font-size:16px;font-weight:300;color:#4EBA6E;max-width:650px;margin:0 auto;}
 .btn-light img{margin-right:0.4rem;vertical-align:text-bottom;}
 .social-icons{text-align:right;}
