--- a/css/style.css
+++ b/css/style.css
@@ -26,55 +26,46 @@ p.lead{color:#02ABA0;margin-bottom:2rem;}
 .btn-group-lg>.btn,
 .btn-lg{padding:0.8rem 1rem;font-size:15px;}
 .light-bg{background-color:#faf6fb;}
-.section{padding:80px 0;}
-.section-title{text-align:center;margin-bottom:3rem;}
+.section{padding:30px 0;}
+.section-title{text-align:center;}
 .section-title small{color:#998a9b;}
-@media (max-width:767px){h1{font-size:40px;}
-h2{font-size:30px;}
-}
-.nav-menu{padding:1rem 0;transition:all 0.3s ease;}
+
+
+.nav-menu{transition:all 0.3s ease;}
 .nav-menu.is-scrolling,
 .nav-menu.menu-is-open{background:#43C6AC;background:-webkit-linear-gradient(to right, #F8FFAE, #43C6AC);background:linear-gradient(to right, #F8FFAE, #43C6AC);-webkit-box-shadow:0px 5px 23px 0px rgba(0, 0, 0, 0.1);-moz-box-shadow:0px 5px 23px 0px rgba(0, 0, 0, 0.1);box-shadow:0px 5px 23px 0px rgba(0, 0, 0, 0.1);}
 .nav-menu.is-scrolling{padding:0;}
 .navbar-nav .nav-link{position:relative;}
-@media (min-width:992px){.navbar-expand-lg .navbar-nav .nav-link{padding-right:1rem;padding-left:1rem;font-size:14px;}
-.navbar-nav>.nav-item>.nav-link.active:after{content:"";border-bottom:2px solid #cd99d4;left:1rem;right:1rem;bottom:5px;height:1px;position:absolute;}
-}
-@media (max-width:991px){.navbar-nav.is-scrolling{padding-bottom:1rem;}
-.navbar-nav .nav-item{text-align:center;}
-}
-header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
+
+
+
+
+
+header{padding:60px 0 0;text-align:center;color:#3d3d3d;}
 .bg-gradient{background:#A1FFCE;background:-webkit-linear-gradient(to right, #FAFFD1, #A1FFCE);background:linear-gradient(to right, #FAFFD1, #A1FFCE);}
 .tagline{font-size:23px;font-weight:300;color:#1d1d1d;max-width:800px;margin:0 auto;}
-.img-holder{height:0;padding-bottom:33%;overflow:hidden;}
-@media (max-width:1200px){.img-holder{padding-bottom:50%;}
-}
-@media (max-width:767px){.tagline{font-size:17px;}
-.img-holder{padding-bottom:100%;}
-}
+.img-holder{height:0;padding-bottom:35%;overflow:hidden;}
+
 .gradient-fill:before{color:#42BFB9;background:-moz-linear-gradient(top, #4EBA6E 0%, #42BFB9 100%);background:-webkit-linear-gradient(top, #4EBA6E 0%, #42BFB9 100%);background:linear-gradient(to bottom, #4EBA6E 0%, #42BFB9 100%);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;}
 .card.features{border:0;border-radius:3px;box-shadow:0px 5px 7px 0px rgba(0, 0, 0, 0.04);transition:all 0.3s ease;}
-@media (max-width:991px){.card.features{margin-bottom:2rem;}
-[class^="col-"]:last-child .card.features{margin-bottom:0;}
-}
+
 .card.features:before{content:"";position:absolute;width:3px;color:#42BFB9;background:-moz-linear-gradient(top, #4EBA6E 0%, #42BFB9 100%);background:-webkit-linear-gradient(top, #4EBA6E 0%, #42BFB9 100%);background:linear-gradient(to bottom, #4EBA6E 0%, #42BFB9 100%);top:0;bottom:0;left:0;}
 .card-text{font-size:14px;}
 .card.features:hover{transform:translateY(-3px);-moz-box-shadow:0px 5px 30px 0px rgba(0, 0, 0, 0.08);-webkit-box-shadow:0px 5px 30px 0px rgba(0, 0, 0, 0.08);box-shadow:0px 5px 30px 0px rgba(0, 0, 0, 0.08);}
 .box-icon{box-shadow:0px 0px 43px 0px rgba(0, 0, 0, 0.14);padding:10px;width:70px;border-radius:3px;margin-bottom:1.5rem;background-color:#FFF;}
 .circle-icon{box-shadow:0px 9px 32px 0px rgba(0, 0, 0, 0.07);padding:10px;width:100px;height:100px;border-radius:50%;margin-bottom:1.5rem;background-color:#FFF;color:#4EBA6E;font-size:48px;text-align:center;line-height:80px;font-weight:300;transition:all 0.3s ease;}
-@media (max-width:992px){.circle-icon{width:70px;height:70px;font-size:28px;line-height:50px;}
-}
+
 .ui-steps li:hover .circle-icon{background-image:-moz-linear-gradient(122deg, #4EBA6E 0%, white 100%);background-image:-webkit-linear-gradient(122deg, #4EBA6E 0%, white 100%);background-image:-ms-linear-gradient(122deg, #4EBA6E 0%, white 100%);background-image:linear-gradient(122deg, #4EBA6E 0%, white 100%);box-shadow:0px 9px 32px 0px rgba(0, 0, 0, 0.09);color:#FFF;}
 .ui-steps li{padding:15px 0;}
 .ui-steps li:not(:last-child){border-bottom:1px solid #f8e3f0;}
 .perspective-phone{position:relative;z-index:-1;}
-@media (min-width:992px){.perspective-phone{margin-top:-150px;}
-}
+
 .tab-content{border-bottom-right-radius:3px;border-bottom-left-radius:3px;background-color:#FFF;box-shadow:0px 5px 7px 0px rgba(0, 0, 0, 0.04);padding:3rem;}
-@media (max-width:992px){.tab-content{padding:1.5rem;}
-}
+
 .tab-content p{line-height:1.8;}
 .tab-content h2{margin-bottom:0.5rem;}
+/*.phone-images {max-width:30vw;}*/
+
 .nav-tabs{border-bottom:0;}
 .nav-tabs .nav-item .nav-link,
 .nav-tabs .nav-link:focus,
@@ -93,11 +84,9 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 .owl-theme .owl-dots .owl-dot span{background:#959595;width:35px;height:8px;border-radius:10px;transition:all 0.3s ease-in;}
 .owl-theme .owl-dots .owl-dot:hover span{background:#4EBA6E;}
 .owl-theme .owl-dots .owl-dot.active span{background:#4EBA6E;box-shadow:0px 9px 32px 0px rgba(0, 0, 0, 0.07);}
-.img-gallery .owl-item{box-shadow:0px 9px 32px 0px rgba(0, 0, 0, 0.07);transform:scale(0.8);transition:all 0.3s ease-in;}
-.img-gallery .owl-item.center{transform:scale(1);}
-@media (max-width:992px){.card-deck{-ms-flex-direction:column;flex-direction:column;}
-.card-deck .card{margin-bottom:15px;}
-}
+.img-gallery .owl-item{box-shadow:0px 9px 32px 0px rgba(0, 0, 0, 0.07);transform:scale(0.7);transition:all 0.3s ease-in;}
+.img-gallery .owl-item.center{transform:scale(.8);}
+
 .call-to-action{text-align:center;color:#FFF;margin:3rem 0;}
 .call-to-action .box-icon{margin-left:auto;margin-right:auto;border-radius:5px;transform:scale(0.85);margin-bottom:2.5rem;}
 .call-to-action h2{color:#1AB3A9;}
@@ -106,15 +95,7 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 .social-icons{text-align:right;}
 .social-icons a{background-color:#FFF;box-shadow:0px 0px 21px 0px rgba(0, 0, 0, 0.05);width:50px;height:50px;display:inline-block;text-align:center;line-height:50px;margin:0 0.3rem;border-radius:5px;color:#959595;transition:all 0.3s ease;}
 .social-icons a:hover{text-decoration:none;color:#02ABA0;}
-@media (max-width:991px){.social-icons{text-align:center;margin-top:2rem;}
-}
 
-@media only screen and (max-width:576px) {
-   .bg-top {
-        background-attachment: scroll !important;
-    }
-    body{background:url(../images/bg.png) repeat-y;}
-}
 
 .grow-md {
     transition: all .2s ease-in-out;
@@ -138,4 +119,45 @@ header{padding:100px 0 0;text-align:center;color:#3d3d3d;}
 .spin:hover {
     -webkit-animation: 1.2s ease 0s normal 1 spin;
     animation: 1.2s ease 0s normal 1 spin;
+}
+
+
+
+@media (max-width:991px){
+.navbar-nav.is-scrolling{padding-bottom:1rem;}
+.navbar-nav .nav-item{text-align:center;}
+.card.features{margin-bottom:2rem;}
+.img-holder{padding-bottom:80%;}
+[class^="col-"]:last-child .card.features{margin-bottom:0;}
+.circle-icon{width:70px;height:70px;font-size:28px;line-height:50px;}
+.tab-content{padding:1.5rem;}
+.phone-images{max-width:75vw;}
+.card-deck{-ms-flex-direction:column;flex-direction:column;}
+.card-deck .card{margin-bottom:15px;}
+.social-icons{text-align:center;margin-top:2rem;}
+}
+@media (max-width:767px){
+h1{font-size:40px;}
+h2{font-size:30px;}
+.tagline{font-size:17px;}
+.img-holder{padding-bottom:100%;}
+#dual-phone-img{max-width:55vw;}
+}
+
+
+@media (min-width:992px){
+.navbar-expand-lg .navbar-nav .nav-link{padding-right:1rem;padding-left:1rem;font-size:14px;}
+.navbar-nav>.nav-item>.nav-link.active:after{content:"";border-bottom:2px solid #cd99d4;left:1rem;right:1rem;bottom:5px;height:1px;position:absolute;}
+.perspective-phone{margin-top:-150px;}
+}
+
+
+
+
+
+@media only screen and (max-width:576px) {
+   .bg-top {
+        background-attachment: scroll !important;
+    }
+    body{background:url(../images/bg.png) repeat-y;}
 }
