--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ header{padding:60px 0 0;text-align:center;color:#3d3d3d;}
 [class^="col-"]:last-child .card.features{margin-bottom:0;}
 .circle-icon{width:70px;height:70px;font-size:28px;line-height:50px;}
 .tab-content{padding:1.5rem;}
-.phone-images{max-width:75vw;}
+.phone-images{max-width:70vw;}
 .card-deck{-ms-flex-direction:column;flex-direction:column;}
 .card-deck .card{margin-bottom:15px;}
 .social-icons{text-align:center;margin-top:2rem;}
@@ -152,8 +152,8 @@ h2{font-size:30px;}
 }
 
 
-/*#logo-nav {width:150px;}
-*/
+#logo-nav {width:180px;}
+
 
 @media only screen and (max-width:576px) {
    .bg-top {
